<resources>
    <string name="App_Name" translatable="false">SafeWallet</string>
    <string name="DeeplinkScheme" translatable="false">safewallet</string>
    <string name="Error_ParameterNotSet">Parameter is not set</string>
    <string name="LargeNumberFormat">%1$s%2$s</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Loading">Loading...</string>
    <string name="Alert_Restart">Restart</string>
    <string name="Alert_Skip" translatable="false">SKIP</string>
    <string name="Alert_Select" translatable="false">SELECT</string>
    <string name="Suspended">SUSPENDED</string>
    <string name="Action_Undo">UNDO</string>
    <string name="Button_Show">Show</string>
    <string name="Button_Hide">Hide</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Enable">Enable</string>
    <string name="Button_Disable">Disable</string>
    <string name="Button_ScanQr">Scan QR Code</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Done">Done</string>
    <string name="Button_Retry">Retry</string>
    <string name="Button_Change">Change</string>
    <string name="Button_Add">Add</string>
    <string name="Button_Approve">Approve</string>
    <string name="Button_Confirm">Confirm</string>
    <string name="Button_Refresh">Refresh</string>
    <string name="Button_Connect">Connect</string>
    <string name="Button_Reject">Reject</string>
    <string name="Button_Disconnect">Disconnect</string>
    <string name="Button_Start">Start</string>
    <string name="Button_Create">Create</string>
    <string name="Button_Advanced">Advanced</string>
    <string name="Button_Restore">Import</string>
    <string name="Button_WatchAddress">Watch Address</string>
    <string name="Button_Reset">Reset</string>
    <string name="Button_Reconnect">Reconnect</string>
    <string name="Button_Understand">I Understand</string>
    <string name="Button_Switch">Switch</string>
    <string name="Button_Remove">Remove</string>
    <string name="Button_Save">Save</string>
    <string name="Button_IAgree">I Agree</string>
    <string name="Button_Continue">Continue</string>
    <string name="Button_Send">Send</string>
    <string name="Button_Search">Search</string>
    <string name="Button_Back">Back</string>
    <string name="Button_Copy">Copy</string>
    <string name="Button_Browser">Browser</string>
    <string name="Button_Delete">Delete</string>
    <string name="Button_LearnMore">Learn More</string>
    <string name="Button_Activate">Activate</string>
    <string name="Button_Sign">Sign</string>
    <string name="Button_Activating">Activating</string>
    <string name="Button_GetApiKeys">Get API Keys</string>
    <string name="Button_Login">Log In</string>
    <string name="Button_SignUp">Sign Up</string>
    <string name="Button_Submit">Submit</string>
    <string name="Button_TryAgain">Try Again</string>
    <string name="Button_Share">Share</string>
    <string name="Button_Apply">Apply</string>
    <string name="Button_SetAmount">Set Amount</string>
    <string name="Error_OutOfRange">Can\'t be less than %1$s or more than %2$s</string>
    <string name="Error_NotInteger">Wrong integer number</string>
    <string name="Error">Error</string>
    <string name="NotAvailable">n/a</string>
    <string name="Any">Any</string>
    <string name="SyncError">Sync error. Try Again</string>
    <string name="FooterText" translatable="false">© Horizontal Systems &amp; SAFE Foundation 2021</string>
    <string name="PercentTitle">Percent</string>
    <string name="Keyboard">Keyboard</string>
    <string name="AccountRecovery_Note">Note</string>
    <string name="AccountRecovery_MigrationRecommended">This wallet seems to use a non-standard character in its recovery phrase and/or a passphrase. If you do not see a balance or transactions please read below for details.\n\nCLICK TO GET MORE INFO</string>
    <string name="AccountRecovery_MigrationRequired">This is a non-standard wallet. \n\nCLICK TO GET MORE INFO</string>
    <string name="Intro_Wallet_Screen1Description">SafeWallet</string>
    <string name="Intro_Wallet_Screen2Title">Unchain Assets</string>
    <string name="Intro_Wallet_Screen2Description">Don\'t lock yourself in and don\'t let others do that to you.</string>
    <string name="Intro_Wallet_Screen3Title">Go Borderless</string>
    <string name="Intro_Wallet_Screen3Description">Bypass conditional barriers and access markets globally.</string>
    <string name="Intro_Wallet_Screen4Title">Stay Private</string>
    <string name="Intro_Wallet_Screen4Description">Do not leak your private and financial data to the world.</string>
    <string name="RootedDevice_Button_Understand">I Understand</string>
    <string name="Welcome_PrivacySettings">Privacy Settings</string>
    <string name="CreateWallet_Advanced_Title">Advanced</string>
    <string name="CreateWallet_Mnemonic">Recovery Phrase</string>
    <string name="CreateWallet_Wordlist">Word List</string>
    <string name="Passphrase">Passphrase</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassphrase">Confirm</string>
    <string name="CreateWallet_N_WordsRecommended">%s words (recommended)</string>
    <string name="CreateWallet_N_Words">%s words</string>
    <string name="CreateWallet_PassphraseConfirm">Confirm</string>
    <string name="CreateWallet_Error_EmptyPassphrase">Passphrase cannot be empty</string>
    <string name="CreateWallet_Error_PassphraseForbiddenSymbols">Please use only supported symbols: <![CDATA[A-Z a-z 0-9 \' " ` & / ? ! : ; . , ~ * $ = + - [ ](){} <> \ _ # @ | % ]]></string>
    <string name="CreateWallet_Error_InvalidConfirmation">Passphrase confirmation does not match</string>
    <string name="CreateWallet_PassphraseDescription">Passphrases add additional security layer for wallets. To restore such wallet a user required both a recovery phrase as well as a passphrase.\n\nPassphrases also make it easy for users to have many multi-coin wallets using a single mnemonic but different passwords.</string>
    <string name="EnterPassphrase">Enter the passphrase</string>
    <string name="Language_English">English</string>
    <string name="Language_Japanese">Japanese</string>
    <string name="Language_Korean">Korean</string>
    <string name="Language_Spanish">Spanish</string>
    <string name="Language_SimplifiedChinese">Chinese (Simplified)</string>
    <string name="Language_TraditionalChinese">Chinese (Traditional)</string>
    <string name="Language_French">French</string>
    <string name="Language_Italian">Italian</string>
    <string name="Language_Czech">Czech</string>
    <string name="Language_Portuguese">Portuguese</string>
    <string name="RateApp_Title_Rate_This_App">Rate this App</string>
    <string name="RateApp_Description_Rate_This_App">Enjoying SafeWallet? Please take a moment to rate this app</string>
    <string name="RateApp_Button_RateIt">Rate It</string>
    <string name="RateApp_Button_NotNow">Not now</string>
    <string name="Restore_Advanced_Title">Advanced</string>
    <string name="Restore_Mnemonic_Description">Enter your wallet recovery phrase (aka mnemonic) which consists of 12, 15, 18, 21 or 24 words and may include additional alphanumeric password.</string>
    <string name="Restore_ValidationFailed">Incorrect Key</string>
    <string name="Restore_Error_MnemonicWordCount">Wrong words count. It must be between 12 or 24 words. You entered: %d</string>
    <string name="Restore_Error_EmptyPassphrase">Passphrase cannot be empty</string>
    <string name="Restore_Error_EmptyPassphrase_Password">Password cannot be empty</string>
    <string name="Restore_InvalidChecksum">Invalid Checksum</string>
    <string name="Restore_PassphraseDescription">Enter the passphrase you used when creating this recovery phrase. Restoring an existing wallet with a new passphrase will generate a brand new wallet.</string>
    <string name="Restore_Title">Choose Blockchains</string>
    <string name="Restore_Key">Key</string>
    <string name="Restore_By">Import By</string>
    <string name="Restore_RestoreBy">Import By</string>
    <string name="Restore_RecoveryPhrase">Recovery Phrase</string>
    <string name="Restore_PrivateKey">Private Key</string>
    <string name="Restore_PrivateKeyHint">Enter EVM Private Key, BIP32 Root Key or Account Extended Private Key</string>
    <string name="Restore_PhraseHint">Enter Recovery Phrase</string>
    <string name="Restore_NonStandardRestore">Non-Standard Import</string>
    <string name="Restore_NonStandard_Description">This page provides a special wallet restore mechanism to SafeWallet users who have a non-standard wallet. Such wallets might have been created in SafeWallet version 0.27 - 0.28 using a non-English recovery phrase and/or a special character in the wallet passphrase (i.e. diacritic symbol).\n\nIf you\'re an affected user then your wallet balance will be shown 0 after restoring such wallet in version 0.29 or above. This page will enable you to restore access to your non-standard wallet. Once restored you\'re recommended to create a new wallet (which will be standard compliant) and move funds there.</string>
    <string name="Restore_Bip_Recommended">(recommended)</string>
    <string name="Restore_PrivateKey_InvalidKey">Invalid Key</string>
    <string name="Select_Coins">Choose Coins</string>
    <string name="SelectContacts_All">All</string>
    <string name="Restore_BirthdayHeight">Birthday Height</string>
    <string name="Restore_ZCash">ZCash</string>
    <string name="Restore_ZCash_BirthdayHeight">Zcash Birthday Height</string>
    <string name="Restore_ZCash_BirthdayHeight_Hint">Enter wallet\'s birthday height for faster synchronization.</string>
    <string name="Restore_ZCash_Birthday_Hint">000000000 (optional)</string>
    <string name="Restore_ZCash_RestoreAsNew">Restore as New</string>
    <string name="Restore_ZCash_NewWallet">New Wallet</string>
    <string name="Restore_ZCash_NewWallet_Description">Doesn\'t have any transactions</string>
    <string name="Restore_ZCash_OldWallet">Existing Wallet</string>
    <string name="Restore_ZCash_OldWallet_Description">Has transactions</string>
    <string name="Restore_ZCash_SlowSyncWarningText">The initial synchronization with the blockchain can consume a lot of internet traffic.</string>
    <string name="ImportCexAccount_SelectCex">Select CEX</string>
    <string name="ImportCexAccount_SelectCexDescription">Select the centralized exchange to which you want to connect.</string>
    <string name="ImportCexAccountBinance_Description">Please provide the API Keys and API Secret to link your exchange.</string>
    <string name="ImportCexAccountBinance_ApiKey">API Key</string>
    <string name="ImportCexAccountBinance_SecretKey">Secret Key</string>
    <string name="Send_DialogLockTime">TimeLock</string>
    <string name="Safe4_Every_Time_Lock_Amount">Every time lock amount</string>
    <string name="Safe4_Starting_Month">Starting month</string>
    <string name="Safe4_Interval_Month">Interval Month</string>
    <string name="Restore_Select_Import_Way">Restore Wallet</string>
    <string name="Restore_Import_Private_Key">from Private key</string>
    <string name="Restore_Import_Private_Key_Desc">Restore wallet from private key</string>
    <string name="Restore_Import_Recovery_Phrase">from Mnemonic</string>
    <string name="Restore_Import_Recovery_Phrase_Desc">Restore wallet from mnemonic</string>
    <string name="Restore_Import_Wallet_Name">Wallet Name</string>
    <string name="Restore_Import_Wallet_Name_Hint">Please input wallet name</string>
    <string name="Restore_Import_Wallet_Path">BIP32 Path</string>
    <string name="Restore_Import_Custom_Path">Custom path</string>
</resources>