<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/toolbarCompose"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/wordsInput"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/input_background_themed"
                android:gravity="top"
                android:inputType="textMultiLine|textVisiblePassword"
                android:maxLines="6"
                android:minHeight="88dp"
                android:paddingStart="12dp"
                android:paddingTop="11dp"
                android:paddingEnd="12dp"
                android:paddingBottom="11dp" />

            <TextView
                android:id="@+id/description"
                style="@style/Subhead2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                android:text="@string/Restore_Mnemonic_Description"
                android:textColor="@color/grey" />

            <io.horizontalsystems.bankwallet.modules.restoreaccount.restoreotherwallet.ImportLanguageView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <io.horizontalsystems.views.SettingsViewSwitch
                android:id="@+id/passphraseToggle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_key_phrase_20"
                app:title="@string/Passphrase" />

            <io.horizontalsystems.bankwallet.ui.extensions.InputView
                android:id="@+id/passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:hint="@string/EnterPassphrase"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passphraseDescription"
                style="@style/Subhead2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Restore_PassphraseDescription"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/walletName"
                style="@style/Subhead2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/Restore_Import_Wallet_Name"
                android:textColor="@color/grey"
                android:drawableRight="@drawable/ic_arrow_right"/>

            <io.horizontalsystems.bankwallet.ui.extensions.InputView
                android:id="@+id/inputWalleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Restore_Import_Wallet_Name_Hint"
                android:inputType="text"/>


            <TextView
                android:id="@+id/walletPath"
                style="@style/Subhead2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/Restore_Import_Wallet_Path"
                android:textColor="@color/grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/rounded_lawrence_background_single">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/inputWalletPath"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/Restore_Import_Custom_Path"
                    android:inputType="text"/>
            </LinearLayout>

            <io.horizontalsystems.bankwallet.ui.extensions.InputView
                android:id="@+id/customPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Restore_Import_Custom_Path"
                android:inputType="text"
                android:visibility="visible"/>

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/importButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>
