<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    android:clickable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingEnd="6dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/Restore_Select_Import_Way"
        app:titleTextAppearance="@style/Title3" />


    <LinearLayout
        android:id="@+id/ll_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_lawrence_background_top">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_phrase"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Body"
                android:text="@string/Restore_Import_Recovery_Phrase"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subhead2"
                android:text="@string/Restore_Import_Recovery_Phrase_Desc"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_arrow_right"
            app:tint="@color/grey" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_lawrence_background_bottom">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_key"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Body"
                android:text="@string/Restore_Import_Private_Key"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subhead2"
                android:text="@string/Restore_Import_Private_Key_Desc"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_arrow_right"
            app:tint="@color/grey" />
    </LinearLayout>


</LinearLayout>
